third_party/rust/serde_repr/tests/ui/multiple_others.stderr
error: only one variant can be #[serde(other)]
 --> $DIR/multiple_others.rs:3:10
  |
3 | #[derive(Deserialize_repr)]
  |          ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
